[gd_scene load_steps=9 format=3 uid="uid://b35hw0ltne80x"]

[ext_resource type="Texture2D" uid="uid://cd7m3efd4jqee" path="res://assets/textures/ui/boxes/BGbox_02A.png" id="1_7w11p"]
[ext_resource type="Script" uid="uid://swy4rwcii48o" path="res://scenes/ui/inventory/inventory_panel.gd" id="2_e2cq2"]
[ext_resource type="PackedScene" uid="uid://wmksnpanxws5" path="res://scenes/ui/inventory/inventory_slot.tscn" id="2_hw3h0"]
[ext_resource type="Texture2D" uid="uid://d33yojs7l7y4x" path="res://assets/textures/ui/dividers/Divider_04.png" id="3_e2cq2"]
[ext_resource type="Resource" uid="uid://bnb8pwkbscem" path="res://resources/item_lists/player_inventory.tres" id="3_n3ki3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mkcey"]
atlas = ExtResource("1_7w11p")
region = Rect2(6, 6, 36, 36)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hw3h0"]
texture = SubResource("AtlasTexture_mkcey")
texture_margin_left = 7.0
texture_margin_top = 8.0
texture_margin_right = 7.0
texture_margin_bottom = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_n3ki3"]
atlas = ExtResource("3_e2cq2")
region = Rect2(0, 8, 48, 2)

[node name="InventoryPanel" type="PanelContainer"]
offset_right = 274.0
offset_bottom = 186.0
theme_override_styles/panel = SubResource("StyleBoxTexture_hw3h0")
script = ExtResource("2_e2cq2")
inventory_resource = ExtResource("3_n3ki3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="InventoryGrid" type="GridContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 8

[node name="InventorySlot" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot2" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot3" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot4" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot5" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot6" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot7" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot8" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot9" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot10" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot11" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot12" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot13" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot14" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot15" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot16" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot17" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot18" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot19" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot20" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot21" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot22" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot23" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot24" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot25" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot26" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot27" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot28" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot29" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot30" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot31" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot32" parent="VBoxContainer/MarginContainer/InventoryGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
texture = SubResource("AtlasTexture_n3ki3")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="ToolbarGrid" type="GridContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 8

[node name="InventorySlot" parent="VBoxContainer/MarginContainer2/ToolbarGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot2" parent="VBoxContainer/MarginContainer2/ToolbarGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot3" parent="VBoxContainer/MarginContainer2/ToolbarGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot4" parent="VBoxContainer/MarginContainer2/ToolbarGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot5" parent="VBoxContainer/MarginContainer2/ToolbarGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot6" parent="VBoxContainer/MarginContainer2/ToolbarGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot7" parent="VBoxContainer/MarginContainer2/ToolbarGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="InventorySlot8" parent="VBoxContainer/MarginContainer2/ToolbarGrid" instance=ExtResource("2_hw3h0")]
layout_mode = 2

[node name="DragSlotTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
mouse_filter = 2
stretch_mode = 2
